fix validation and authentication
