# backend/routes/stones.js
@@ -1,6 +1,6 @@
 const express = require('express');
 const router = express.Router();
-
+const authenticate = require('../middleware/auth');
 const stonesController = require('../controllers/stones');
 
 // GET all stones
@@ -9,13 +9,15 @@ router.get('/', stonesController.getAll);
 // GET stone by id
 router.get('/:id', stonesController.getSingle);
 
+const { validateStone } = require('../validation/stonevalidator');
+
 // CREATE new stone
-router.post('/', stonesController.createItem);
+router.post('/', authenticate, validateStone, stonesController.createItem);
 
 // UPDATE stone by id
-router.put('/:id', stonesController.updateItem);
+router.put('/:id', authenticate, validateStone, stonesController.updateItem);
 
 // DELETE stone by id
-router.delete('/:id', stonesController.deleteItem);
+router.delete('/:id', authenticate, stonesController.deleteItem);
 
 module.exports = router;
